--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -7,9 +7,28 @@
   border-radius: 15px;
   box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
 
-  img {
-    width: 302px;
-    border-radius: 8px;
+  .box-img {
+    position: relative;
+
+    img {
+      width: 302px;
+      border-radius: 8px;
+    }
+
+    img.card-img-overlay {
+      padding: 127px;
+      background-color: $cyan-primary-color;
+      mix-blend-mode: normal;
+      opacity: 0;
+      border-radius: 8px;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    img.card-img-overlay:hover {
+      opacity: 0.5;
+    }
   }
 
   h3 {
@@ -21,6 +40,11 @@
     letter-spacing: 0px;
     text-align: left;
     color: #ffffff;
+  }
+
+  h3.title:hover {
+    color: $cyan-primary-color;
+    cursor: pointer;
   }
 
   p {
@@ -105,6 +129,15 @@
       margin-left: 16px;
       position: relative;
       bottom: 18px;
+    }
+
+    p .name-author {
+      color: $white-color;
+    }
+
+    p .name-author:hover {
+      color: $cyan-primary-color;
+      cursor: pointer;
     }
   }
 }
